--- a/CSS/style.css
+++ b/CSS/style.css
@@ -68,6 +68,11 @@ nav.navbar-transparente {
     color: black;
 }
 
+.carousel-control-next, .carousel-control-prev {
+    width: 5%;
+    
+}
+
 .caixa {
     padding-top: 20px;
     padding-bottom: 20px;
@@ -103,6 +108,39 @@ nav.navbar-transparente {
     padding-left: 80px;
 }
 
+footer {
+    background: #000;
+    padding: 50px 0 20px 0;
+    position: relative;
+}
+
+footer h4 {
+    color: #919496;
+    font-size: 0.8em;
+    text-transform: uppercase;
+}
+
+footer .navbar-nav a {
+    color: white;
+    font-size: 0.8em;
+}
+
+footer .navbar-nav a:hover {
+    color: #9bf0e1;
+    font-size: 0.8em;
+    text-decoration: none;
+}
+
+footer ul {
+    list-style: none;
+}
+
+footer ul li {
+    float: right;
+    margin: 0 5px;
+
+}
+
 h1 {
     font-weight: 900;
     letter-spacing: -0.05em;
@@ -126,6 +164,7 @@ h3 {
 @media (max-width: 575.98px) {
     .btn-custom {
         margin: 10px 15px;
+        font-size: 1em;
     }
 }
 
